BoaUAT/src/objects/Stock_Location__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_free_stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from free stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execlude_from_Valuation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execlude from Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WIP_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is WIP Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Number_Exo__c</fullName>
        <externalId>true</externalId>
        <label>Location Number (Exo)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_address__c</fullName>
        <label>Street address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stock Location</label>
    <nameField>
        <label>Stock Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>